# kafka_chat

./: pyproject.toml
src/kafka_chat/kafka/: cchat.py  consumer.py  pchat.py  pro.py
